src/core-crm/objects/Designation__c/Designation__c.object-meta.xml
<CustomObject>
    <description>Designation stores the ‘Cause’ data that a donor can donate to as well as data relating to setting up a new donation cause and publishing the cause on the QUT website.</description>
    <label>Designation</label>
    <nameField>
        <label>Designation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>