src/core-crm/objects/Designation__c/fields/Activation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Start_Date__c</fullName>
    <description>The date the Designation is able to start receiving donations.</description>
    <inlineHelpText>The date the Designation is able to start receiving donations.</inlineHelpText>
    <label>Activation Start Date</label>
    <type>Date</type>
</CustomField>