src/core-crm/objects/Designation__c/fields/Archived_Comment__c.field-meta.xml
<CustomField>
    <fullName>Archived_Comment__c</fullName>
    <description>Additional business comment about the archiving reason.</description>
    <inlineHelpText>Additional business comment about the archiving reason.</inlineHelpText>
    <label>Archived Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>