src/core-crm/objects/Designation__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <description>The date the Designation was archived.</description>
    <inlineHelpText>The date the Designation was archived.</inlineHelpText>
    <label>Archived Date</label>
    <type>Date</type>
</CustomField>