src/core-crm/objects/Designation__c/fields/Designation_Code__c.field-meta.xml
<CustomField>
    <fullName>Designation_Code__c</fullName>
    <description>The Designation code.</description>
    <inlineHelpText>The Designation code.</inlineHelpText>
    <label>Designation Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>