src/core-crm/objects/Designation__c/fields/Designation_description__c.field-meta.xml
<CustomField>
    <fullName>Designation_Description__c</fullName>
    <description>The Designation description.</description>
    <inlineHelpText>The Designation description.</inlineHelpText>
    <label>Designation Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>