src/core-crm/objects/Designation__c/fields/Endowment_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Endowment_Account_Type__c</fullName>
    <description>Indicates whether the GL Account setup to receive funds from the Endowment is Perpetual or Non-Perpetual.</description>
    <inlineHelpText>Indicates whether the GL Account setup to receive funds from the Endowment is Perpetual or Non-Perpetual.</inlineHelpText>
    <label>Endowment Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Non-Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>