src/core-crm/objects/Designation__c/fields/Giving_Category__c.field-meta.xml
<CustomField>
    <fullName>Giving_Category__c</fullName>
    <description>The giving category or categories, the Opportunity Participant is interested in donating to.</description>
    <inlineHelpText>The giving category or categories, the Opportunity Participant is interested in donating to.</inlineHelpText>
    <label>Giving Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Giving_Category</valueSetName>
    </valueSet>
</CustomField>