src/core-crm/objects/Designation__c/fields/Is_For_Private_Giving__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Private_Giving__c</fullName>
    <description>Identifies a private Designation that is not available for QUT staff or the general public to donate to.</description>
    <inlineHelpText>Identifies a private Designation that is not available for QUT staff or the general public to donate to.</inlineHelpText>
    <label>Is For Private Giving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>