src/core-crm/objects/Designation__c/fields/Is_For_Public_Giving__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Public_Giving__c</fullName>
    <description>Identifies whether the Designation is intended to be published on the QUT Giving webpage.</description>
    <inlineHelpText>Identifies whether the Designation is intended to be published on the QUT Giving webpage.</inlineHelpText>
    <label>Is For Public Giving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>