src/core-crm/objects/Designation__c/fields/Is_For_Staff_Giving__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Staff_Giving__c</fullName>
    <description>Identifies whether the Designation is intended to be published on the internal QUT Staff Portal.</description>
    <inlineHelpText>Identifies whether the Designation is intended to be published on the internal QUT Staff Portal.</inlineHelpText>
    <label>Is For Staff Giving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>