src/core-crm/objects/Designation__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>Identifier/reference for an external source to support Data Migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier/reference for an external source to support Data Migration.</inlineHelpText>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>