src/core-crm/objects/Designation__c/fields/Public_Giving_Publish_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Giving_Publish_Start_Date__c</fullName>
    <description>The date from when the Designation should be published on the Giving Portal.</description>
    <inlineHelpText>The date from when the Designation should be published on the Giving Portal.</inlineHelpText>
    <label>Public Giving Publish Start Date</label>
    <type>Date</type>
</CustomField>