src/core-crm/objects/Designation__c/fields/QA_Completed__c.field-meta.xml
<CustomField>
    <fullName>QA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Quality Audit has been completed.</description>
    <inlineHelpText>Indicates whether the Quality Audit has been completed.</inlineHelpText>
    <label>QA Completed</label>
    <type>Checkbox</type>
</CustomField>