src/core-crm/objects/Designation__c/fields/Staff_Giving_Portal_Publish_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_Giving_Portal_Publish_End_Date__c</fullName>
    <description>The date from when the Designation should stop being published.</description>
    <inlineHelpText>The date from when the Designation should stop being published.</inlineHelpText>
    <label>Staff Giving Portal Publish End Date</label>
    <type>Date</type>
</CustomField>