src/core-crm/objects/Designation__c/fields/Staff_Giving_Publish_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_Giving_Publish_Start_Date__c</fullName>
    <description>The date from when the Designation should be published.</description>
    <inlineHelpText>The date from when the Designation should be published.</inlineHelpText>
    <label>Staff Giving Publish Start Date</label>
    <type>Date</type>
</CustomField>