src/core-crm/objects/Designation__c/fields/Study_Association__c.field-meta.xml
<CustomField>
    <fullName>Study_Association__c</fullName>
    <description>Study Area(s) the Designation relates to.</description>
    <inlineHelpText>Study Area(s) the Designation relates to. Enables filtering of Designations published on the QUT Giving webpages.</inlineHelpText>
    <label>Study Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Study_Association</valueSetName>
    </valueSet>
</CustomField>