src/core-crm/objects/Designation__c/recordTypes/Endowment.recordType-meta.xml
<RecordType>
    <fullName>Endowment</fullName>
    <active>true</active>
    <description>Create a Designation for an Endowment Fund.</description>
    <label>Endowment</label>
</RecordType>