src/core-crm/objects/Designation__c/recordTypes/Giving_Cause.recordType-meta.xml
<RecordType>
    <fullName>Giving_Cause</fullName>
    <active>true</active>
    <description>Create a Designation for a QUT Giving Cause.</description>
    <label>Giving Cause</label>
</RecordType>