src/core-crm/objects/Designation__c/validationRules/Activation_End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_End_Date_Start_Date</fullName>
    <active>true</active>
    <description>Activation End Date should be greater than Activation Start Date.</description>
    <errorConditionFormula>AND(    
    OR(
        ISNEW(),
        ISCHANGED(Activation_End_Date__c)
    ),
    NOT(ISBLANK(Activation_End_Date__c)),
    Activation_End_Date__c &lt;= Activation_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Activation End Date should be greater than Activation Start Date</errorMessage>
</ValidationRule>