src/core-crm/objects/Designation__c/validationRules/Activation_Publish_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_Publish_End_Date</fullName>
    <active>true</active>
    <description>Activation End Date should be greater than or equal to Public Giving Publish End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_End_Date__c)
    ),
    NOT(ISBLANK(Activation_End_Date__c)),
    Activation_End_Date__c &lt;  Public_Giving_Publish_End_Date__c  
)</errorConditionFormula>
    <errorMessage>Activation End Date should be greater than or equal to Public Giving Publish End Date</errorMessage>
</ValidationRule>