src/core-crm/objects/Designation__c/validationRules/Activation_Publish_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_Publish_Start_Date</fullName>
    <active>true</active>
    <description>Activation Start Date should be less than or equal to Public Giving Publish Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_Start_Date__c)
    ),
    NOT(ISBLANK(Activation_Start_Date__c)),
    Activation_Start_Date__c &gt; Public_Giving_Publish_Start_Date__c 
)</errorConditionFormula>
    <errorMessage>Activation Start Date should be less than or equal to Public Giving Publish Start Date</errorMessage>
</ValidationRule>