src/core-crm/objects/Designation__c/validationRules/Activation_Staff_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_Staff_End_Date</fullName>
    <active>true</active>
    <description>Activation End Date should be Greater than or equal to Staff Giving Publish End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_End_Date__c)
    ),
    NOT(ISBLANK(Activation_End_Date__c)),
    Activation_End_Date__c &lt;  Staff_Giving_Publish_End_Date__c  
)</errorConditionFormula>
    <errorMessage>Activation End Date should be Greater than or equal to Staff Giving Publish End Date</errorMessage>
</ValidationRule>