src/core-crm/objects/Designation__c/validationRules/Activation_Start_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_Start_Date_is_Required</fullName>
    <active>true</active>
    <description>Activation Start Date field is required.</description>
    <errorConditionFormula>AND(
    OR (
      ISNEW(),
      ISCHANGED(Activation_Start_Date__c)
    ),
    ISBLANK( Activation_Start_Date__c ))</errorConditionFormula>
    <errorDisplayField>Activation_Start_Date__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>