src/core-crm/objects/Designation__c/validationRules/Archived_Comment_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Comment_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISCHANGED( Archived_Date__c ),
     ISCHANGED( Archived_Reason__c ),
     ISCHANGED( Archived_Comment__c )),
     ISBLANK(Archived_Comment__c ),
 OR( NOT(ISBLANK(Archived_Date__c )) ,
     NOT( ISPICKVAL( Archived_Reason__c , &apos;&apos;)))
)</errorConditionFormula>
    <errorDisplayField>Archived_Comment__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>