src/core-crm/objects/Designation__c/validationRules/Archived_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISCHANGED( Archived_Date__c ), 
      ISCHANGED( Archived_Reason__c ),
      ISCHANGED(  Archived_Comment__c )),
      ISBLANK( Archived_Date__c ),
      OR( NOT(ISPICKVAL(Archived_Reason__c , &apos;&apos;)) ,
       NOT(ISBLANK( Archived_Comment__c ))) 
 )</errorConditionFormula>
    <errorDisplayField>Archived_Date__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>