src/core-crm/objects/Designation__c/validationRules/Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Required</fullName>
    <active>true</active>
    <description>Description field is required.</description>
    <errorConditionFormula>AND(
    OR (
      ISNEW(),
      ISCHANGED(Description__c)
    ),
    ISBLANK( Description__c ))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>