src/core-crm/objects/Designation__c/validationRules/PublicGivingPublishStart_Date_isRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PublicGivingPublishStart_Date_isRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(Ready_For_Publishing__c)),
Ready_For_Publishing__c = true,
ISBLANK(Public_Giving_Publish_Start_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Public_Giving_Publish_Start_Date__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>