src/core-crm/objects/Designation__c/validationRules/Publish_Activation_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_Activation_End_Date</fullName>
    <active>true</active>
    <description>Public Giving Publish End Date should be less than or equal to Activation End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Public_Giving_Publish_End_Date__c)
    ),    
    NOT(ISBLANK(Public_Giving_Publish_End_Date__c)),
    Public_Giving_Publish_End_Date__c &gt; Activation_End_Date__c 
)</errorConditionFormula>
    <errorMessage>Public Giving Publish End Date should be less than or equal to Activation End Date</errorMessage>
</ValidationRule>