src/core-crm/objects/Designation__c/validationRules/Publish_Activation_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_Activation_Start_Date</fullName>
    <active>true</active>
    <description>Public Giving Publish Start Date should be greater than or equal to Activation Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Public_Giving_Publish_Start_Date__c)
    ),    
    NOT(ISBLANK(Public_Giving_Publish_Start_Date__c)),
    Public_Giving_Publish_Start_Date__c &lt; Activation_Start_Date__c  
)</errorConditionFormula>
    <errorMessage>Public Giving Publish Start Date should be greater than or equal to Activation Start Date</errorMessage>
</ValidationRule>