src/core-crm/objects/Designation__c/validationRules/Publish_End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_End_Date_Start_Date</fullName>
    <active>true</active>
    <description>Public Giving Publish End Date should be greater than Public Giving Publish Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Public_Giving_Publish_End_Date__c)
    ),
    NOT(ISBLANK(Public_Giving_Publish_End_Date__c)),
    Public_Giving_Publish_End_Date__c &lt;= Public_Giving_Publish_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Public Giving Publish End Date should be greater than Public Giving Publish Start Date</errorMessage>
</ValidationRule>