src/core-crm/objects/Designation__c/validationRules/Publish_Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_Start_Date_End_Date</fullName>
    <active>true</active>
    <description>Public Giving Publish Start Date should be less than Public Giving Publish End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Public_Giving_Publish_Start_Date__c)
    ),
    NOT(ISBLANK(Public_Giving_Publish_Start_Date__c)),
    Public_Giving_Publish_Start_Date__c &gt;=  Public_Giving_Publish_End_Date__c 
)</errorConditionFormula>
    <errorMessage>Public Giving Publish Start Date should be less than Public Giving Publish End Date</errorMessage>
</ValidationRule>