src/core-crm/objects/Designation__c/validationRules/Staff_Activation_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Activation_End_Date</fullName>
    <active>true</active>
    <description>Staff Giving Publish End Date should be less than or equal to Activation End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Publish_End_Date__c)
    ),
    NOT(ISBLANK(Staff_Giving_Publish_End_Date__c)),
    Staff_Giving_Publish_End_Date__c &gt; Activation_End_Date__c  
)</errorConditionFormula>
    <errorMessage>Staff Giving Publish End Date should be less than or equal to Activation End Date</errorMessage>
</ValidationRule>