src/core-crm/objects/Designation__c/validationRules/Staff_Activation_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Activation_Start_Date</fullName>
    <active>true</active>
    <description>Staff Giving Publish Start Date should be greater than or equal to Activation Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Publish_Start_Date__c)
    ),
    NOT(ISBLANK(Staff_Giving_Publish_Start_Date__c)),
    Staff_Giving_Publish_Start_Date__c &lt; Activation_Start_Date__c   
)</errorConditionFormula>
    <errorMessage>Staff Giving Publish Start Date should be greater than or equal to Activation Start Date</errorMessage>
</ValidationRule>