src/core-crm/objects/Designation__c/validationRules/Staff_End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_End_Date_Start_Date</fullName>
    <active>true</active>
    <description>Staff Giving Publish End Date should be greater than Staff Giving Publish Start Date</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Publish_End_Date__c)
    ),    
    NOT(ISBLANK(Staff_Giving_Publish_End_Date__c)),
    Staff_Giving_Publish_End_Date__c &lt;= Staff_Giving_Publish_Start_Date__c 
)</errorConditionFormula>
    <errorMessage>Staff Giving Publish End Date should be greater than Staff Giving Publish Start Date</errorMessage>
</ValidationRule>