src/core-crm/objects/Designation__c/validationRules/Staff_Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Start_Date_End_Date</fullName>
    <active>true</active>
    <description>Staff Giving Publish Start Date should be less than Staff Giving Publish End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Publish_Start_Date__c)
    ),
    NOT(ISBLANK(Staff_Giving_Publish_Start_Date__c)),
    Staff_Giving_Publish_Start_Date__c &gt;= Staff_Giving_Publish_End_Date__c   
)</errorConditionFormula>
    <errorMessage>Staff Giving Publish Start Date should be less than Staff Giving Publish End Date</errorMessage>
</ValidationRule>