src/core-crm/objects/Designation__c/listViews/All_Designations.listView-meta.xml
<ListView>
    <fullName>All_Designations</fullName>
    <columns>NAME</columns>
    <columns>Designation_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Designations</label>
    <sharedTo>
        <group>Advancement</group>
    </sharedTo>
</ListView>